# composing-datasets

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
composing_datasets/: __init__.py  dataset.py
tests/: test_composing_datasets.py  test_dataset.py
tests/integration/: test_hate_speech.py  test_imdb.py
tests/unit/: test_hate_speech.py  test_imdb.py  test_text_classification_dataset.py
