[tool.poetry]
name = "composing-datasets"
version = "0.1.0"
description = "A project illustrating Composition Over Inheritance for datasets."
authors = ["Tilman Krokotsch <tilman.krokotsch@tu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.1"
hydra-core = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {extras = ["d"], version = "^21.12b0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
